# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  Makefile  ignore-words.txt  pyproject.toml  requirements.txt
app/: main.py
app/config/: __init__.py  app.py  logging.py
app/core/exceptions/: __init__.py  app.py  bind_handler.py  database.py  db_constraint_messages.py  handlers.py  response_schemas.py
app/core/repositories/: __init__.py  base.py  base_bulk_upsert.py  base_create.py  base_delete.py  base_read.py  base_update.py
app/core/services/: base.py  base_bulk_upsert.py  base_create.py  base_delete.py  base_read.py  base_update.py
app/middlewares/: __init__.py  add_middleware.py  process_time.py
